# ENPAX

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml
GenStorBOSSE/: pvscm_nrel_solar_bess_model.py
GenStorBOSSE/.ipynb_checkpoints/: pvscm_nrel_solar_bess_model-checkpoint.py
configs/: generic_passthrough_full.yaml  generic_passthrough_minimal.yaml  solar.yaml  solar_bat.yaml  solar_bess.yaml  solar_bess_plus_standalone_bess_hybrid.yaml  solar_plus_geothermal_hybrid.yaml  standalone_battery.yaml  standalone_solar.yaml
enpax/: base_model.py  outputs.py  registry.py  runner.py
enpax/models/: bess_2025.py  generic_passthrough.py  solar_bess_2024Q1.py
examples/: RES_cost_sweep.ipynb  example_solar.ipynb  examples.ipynb  examples_using_dictionaries.ipynb  examples_using_dictionaries.ipynb.ipynb  examples_using_yaml_config_files.ipynb  solar_bess_capex_opex_sweep.csv  standalone_bess_capex_opex_sweep.csv  standalone_solar_capex_opex_breakdown.csv
examples/.ipynb_checkpoints/: example_solar-checkpoint.ipynb
genstor/: base_model.py  registry.py  runner.py
genstor/.ipynb_checkpoints/: outputs-checkpoint.py
genstor/models/: bess.py  bess_2025.py  solar_bess.py  solar_bess_2024Q1.py
genstorbosse_nrel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
