[project]
name = "enpax"
version = "0.1.0"
description = "ENergy Platform — Automated eXpenditures"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "jupyterlab"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "enpax",
    "enpax.model"
]